[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
nanoid = "0.4.0"
